Revision history for XML::Genx.

0.04  Tue Nov 30 23:14:44 GMT 2004
	- Fix up the docs to mention AddAttributeLiteral().
	- Make the namespace parameter in StartElementLiteral()
	  optional.  Ditto for AddAttributeLiteral().

0.03  Tue Nov 30 13:44:28 GMT 2004
	- Everything now dies by default instead of returning a status
          code.

0.02  Tue Nov 30 08:49:13 GMT 2004
	- Added StartDocSender(), so you don't always have to output
	  to a filehandle.
	- Fixed compilation warnings about "cast to pointer from
	  integer of different size".

0.01  Sat Nov 27 09:03:47 GMT 2004
	- Original version.